--- a/login-main.html
+++ b/login-main.html
@@ -31,8 +31,8 @@
                     <details class="profile-menu">
                         <summary>Profile <span class="arrow-down"></span></summary>
                         <ul class="profile-out">
-                            <li><a href="#.html">Xem hồ sơ</a></li>
-                            <li><a href="index.html">Đăng xuất</a></li>
+                            <li><a href="#.html">View profile</a></li>
+                            <li><a href="index.html">Log out</a></li>
                         </ul>
                     </details>
                 </li>
