--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </header><br>
     <div class="menubtn">
         <nav class="navbar">
-            <button class="nav-toggle" aria-label="Mở menu">&#9776;</button>
-            <ul class="nav-menu">
+            <button class="nav-toggle" id="toggle-btn">&#9776;</button>
+            <ul id="menu" class="nav-menu">
                 <li><a href="#">All category</a></li>
                 <li><a href="#">Hot offers</a></li>
                 <li><a href="#">Gift boxes</a></li>
