update css login-main style main

--- a/login-main.html
+++ b/login-main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
             <ul>
                 <li class="profile-menu-container">
                     <details class="profile-menu">
-                        <summary>Profile <span class="arrow-down"></span></summary>
+                        <summary>Profile</summary>
                         <ul class="profile-out">
                             <li><a href="#.html">View profile</a></li>
                             <li><a href="index.html">Log out</a></li>
